--- a/sobre.html
+++ b/sobre.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <h1>Sobre Mim</h1>
-        <p>Sou estudante de Engenharia Elétrica e entusiasta de desenvolvimento web. Nos meus tempos livres, gosto de praticar esportes e aprender novas tecnologias.</p>
+        <p>Olá! Meu nome é Evely Gaspar Vasconcelos, tenho 21 anos e moro em São Luís, Maranhão. Atualmente, curso Engenharia Elétrica na Universidade Federal do Maranhão e também estudo Tecnologia em Ciência de Dados na UNINTER. Adoro passar o tempo na praia, escutar música e viajar para conhecer novos lugares e culturas.</p>
     </main>
 </body>
 </html>
