--- a/formacao.html
+++ b/formacao.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <h1>Formação</h1>
-        <p>Atualmente estou cursando Engenharia Elétrica na [Universidade]. Tenho conhecimento em desenvolvimento web e estou sempre procurando aprimorar minhas habilidades.</p>
+        <p>Atualmente, estou cursando Engenharia Elétrica na Universidade Federal do Maranhão (UFMA), onde estou adquirindo um conhecimento sólido em sistemas elétricos de potência e outras áreas da engenharia. Além disso, estou complementando minha formação com um curso de Tecnologia em Ciência de Dados na UNINTER, o que me permite desenvolver habilidades analíticas e tecnológicas voltadas para o tratamento e interpretação de grandes volumes de dados. Estou sempre buscando novas oportunidades de aprendizado para expandir meus conhecimentos e habilidades nas áreas de engenharia e tecnologia.</p>
     </main>
 </body>
 </html>
