--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,7 @@
     </header>
     <main>
         <h1>Portfólio</h1>
-        <p>Aqui estão alguns dos meus trabalhos:</p>
-        <ul>
-            <li><a href="https://example.com/projeto1">Projeto 1</a></li>
-            <li><a href="https://example.com/projeto2">Projeto 2</a></li>
+        <p>Atualmente, sou estagiária na Equatorial Energia, onde estou há mais de 11 meses. No meu papel, realizo simulações de fluxo de carga e participo do planejamento e otimização do sistema elétrico.</p>
         </ul>
     </main>
 </body>
